--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "sass": "^1.77.2",
+    "swiper": "^11.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuetify": "^3.6.7"
