--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "gulp": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rtlcss": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "pinia": "^2.1.7",
     "swiper": "^11.1.3",
     "vue": "^3.4.21",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0",
+    "vue3-lottie": "^3.3.0",
     "vuetify": "^3.6.7"
   },
   "devDependencies": {
@@ -27,7 +33,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
-    "sass": "^1.77.2",
+    "sass": "^1.77.5",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
