--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-lottie": "^3.3.0",
     "vuetify": "^3.6.7"
   },
