--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
+    "gulp-filter": "^9.0.1",
     "npm-run-all2": "^6.1.2",
     "sass": "^1.77.5",
     "typescript": "~5.4.0",
